--- a/package.json
+++ b/package.json
@@ -9,13 +9,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/material": "^5.9.2",
+    "@types/react-transition-group": "^4.4.5",
+    "axios": "^0.27.2",
+    "date-fns": "^2.29.1",
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-animated-router": "^1.2.4",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
+    "react-toastify": "^9.0.7",
+    "react-transition-group": "^4.4.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.7",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
   }
